[metadata]
name = ilorest
summary = ilorest utility
author = HPE
author-email = hpe@hpe.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3

[files]
packages =
    ilorest

[entry_points]
console_scripts =
    ilorest = ilorest.rdmc:ilorestcommand
